[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
include-package-data = false

[tool.setuptools.packages.find]
include = ['whoispyside_clone']

[project]
name = "whoispyside6-clone"
version = "0.0.1"
authors = [{ name = "fmowl10" }, { name = "minwook-shin" }]
description = "whois pyside6 clone GUI applications."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.gui-scripts]
whoispyside6-clone = "whoispyside6_clone:__main__.main"
